[package]
name = "texas_holdem_monte_carlo"
version = "0.1.0"
authors = ["datakdtk <0k.datak.ya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playing_card = { path = "../playing_card" }
texas_holdem = { path = "../texas_holdem" }
